adjusts attribute and element tags

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <nav>
+    <header>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -25,14 +25,12 @@
             </ul>
         </div>
     </div>
-    </nav>
-
+    </header>
     <main>
-    <div class="hero"></div>
-
+    <div class="backgroundimage"></div>
     <div class="content">
         <section>
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -40,7 +38,6 @@
             </p>
         </div>
         </section>
-
         <section>
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
@@ -50,7 +47,6 @@
             </p>
         </div>
         </section>
-
         <section>
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
@@ -61,8 +57,6 @@
         </div>
         </section>
     </div>
-
-    <aside>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -86,16 +80,15 @@
             </p>
         </div>
     </div>
-    </aside>
-</main>
-    <footer>
+    </main>
+<footer>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
-    </footer>
+</footer>
 </body>
 
 </html>
