--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     </div>
     </header>
     <main>
-    <div class="backgroundimage"></div>
+        <!-- Moved image link from css to html doc and added alt text -->
+    <img src="./assets/images/digital-marketing-meeting.jpg" alt="picture of coworkers collaborating" class="backgroundimage">
     <div class="content">
         <section>
         <div id="search-engine-optimization" class="search-engine-optimization">
