adds comment to separate out sidebar section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         </div>
         </section>
     </div>
+    <!--Side-bar-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
