--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!--Main content sections below-->
     <div class="content">
         <section>
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="image of search engine optimization" class="type1contentblock" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -42,7 +42,7 @@
         </div>
         </section>
         <section>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="image of online reputation management" class="type2contentblock" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -51,7 +51,7 @@
         </div>
         </section>
         <section>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="image of social-media-marketing" class="type1contentblock" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -85,6 +85,7 @@
         </div>
     </div>
     </main>
+<!--Footer-->
 <footer>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
