condenses and reorders css stylesheet

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!--Main content sections below-->
     <div class="content">
         <section>
-        <div class="search-engine-optimization">
+        <div class="content-block">
             <img src="./assets/images/search-engine-optimization.jpg" alt="image of search engine optimization" class="type1contentblock" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -42,7 +42,7 @@
         </div>
         </section>
         <section>
-        <div class="online-reputation-management">
+        <div class="content-block">
             <img src="./assets/images/online-reputation-management.jpg" alt="image of online reputation management" class="type2contentblock" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -51,7 +51,7 @@
         </div>
         </section>
         <section>
-        <div class="social-media-marketing">
+        <div class="content-block">
             <img src="./assets/images/social-media-marketing.jpg" alt="image of social-media-marketing" class="type1contentblock" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -61,22 +61,22 @@
         </section>
     </div>
     <!--Side-bar-->
-    <div class="benefits">
-        <div class="benefit-lead">
+    <div class="sidebar">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="image of lead generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="image of brand awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="image of cost management"/>
             <p>
