--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <div class="pagemenu">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
