--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
 <body>
     <!--Nav bar-->
-    <header>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div class="pagemenu">
+        <nav class="pagemenu">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,76 +23,71 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
     </header>
+
 <main>
 <!-- Background image below -->
 <img src="./assets/images/digital-marketing-meeting.jpg" alt="image of coworkers collaborating" class="backgroundimage">
 
-        <!--Main content sections below-->
-    <div class="content">
-        <section>
-        <div class="content-block" id="search-engine-optimization">
+<!--Main content sections below-->
+    <section class="content">
+        <section class="content-block" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="image of search engine optimization" class="type1contentblock" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
         </section>
-        <section>
-        <div class="content-block" id="online-reputation-management">
+
+        <section class="content-block" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="image of online reputation management" class="type2contentblock" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
         </section>
-        <section>
-        <div class="content-block" id="social-media-marketing">
+
+        <section class="content-block" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="image of social-media-marketing" class="type1contentblock" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
         </section>
-    </div>
+    </section>
+
     <!--Side-bar-->
-    <div class="sidebar">
-        <div class="benefit">
+    <aside class="sidebar">
+        <section class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="image of lead generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit">
+        </section>
+        <section class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="image of brand awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit">
+        </section>
+        <section class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="image of cost management"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
+        </section>
+    </aside>
     </main>
 <!--Footer-->
-<footer>
-    <div class="footer">
+<footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
 </footer>
 </body>
 
